--- a/src/styles/resolutions/mobile.scss
+++ b/src/styles/resolutions/mobile.scss
@@ -6,10 +6,14 @@
 
 // general rule for smaller scren sizes
 @media only screen and (max-width: 450px) and (max-height: 812px) {
+	.content {
+		height: 160vh;
+	}
+	
 	section.panel {
-		width: inherit;
+		
 		max-height: fit-content;
-
+		max-width: 450px;
 		padding: 0 1.5rem; 
 		font-size: smaller;
 
@@ -17,12 +21,15 @@
 			max-width: 18em;
 		}
 
+		img.contact-logo {
+			margin-right: 7px;
+		}
 		
-		h1 { font-size: large; font-weight: 200;}
+		// h1 { font-size: larger; font-weight: 300; }
 
-		h2 { font-size: medium; font-weight: 180; }
+		h2 { font-size: large; font-weight: 240; }
 
-		h3 { font-size: medium; font-weight: 150; }
+		h3 { font-size: medium; font-weight: 200; }
 		
 		// hide the description in skill section because its too wordy
 		h2 ~ h3 {
@@ -55,7 +62,7 @@
 	section.panel h1 {
 
 		margin-top : 2em;
-		font-size: 2.5em;
+		// font-size: 2.5em;
 
 
 
@@ -69,12 +76,17 @@
 }
 // same thing but in landscape mode
 @media only screen and (max-width: 812px) and (max-height: 450px) {
+
+	.content {
+		height: 300vh;
+	}
+
 	.panel p {
 		width : 80%;
 	}
 
 	section.panel, section.loading-spinner-parent {
-		width: inherit;
+		max-width: 812px;
 		padding: 0 2rem; 
 		font-size: smaller;
 		
@@ -106,14 +118,18 @@
 	viewport : portrait	
 */
 @media only screen and (min-width : 375px) and (min-height: 667px) {
-	
+  section.panel {
+		width: 375px;
+	}	
 }
 /* 
 	device: Iphone 6/7/8 Ios 11
 	viewport: landscape	
 */
 @media only screen and (min-width : 667px) and (min-height: 375px) {
-	
+	section.panel {
+		width: 667px;
+	}	
 }
 
 
@@ -122,14 +138,18 @@
 	viewport : portrait	
 */
 @media only screen and (min-width : 414px) and (min-height: 736px) {
-	
+	section.panel {
+		width: 414px;
+	}		
 }
 /* 
 	device: Iphone 6/7/8 Ios 11
 	viewport: landscape	
 */
 @media only screen and (min-width : 736px) and (min-height: 414px) {
-
+	section.panel {
+		width: 736px;
+	}	
 }
 
 /*
@@ -137,14 +157,18 @@
 	viewport : portrait	
 */
 @media only screen and (min-width : 360px) and (min-height: 740px) {
-
+	section.panel {
+		width: 360px;
+	}	
 }
 /* 
 	device: Galaxy S9/S9 + android 7.0
 	viewport: landscape	
 */
 @media only screen and (min-width : 740px) and (min-height: 360px) {
-
+	section.panel {
+		width: 740px;
+	}	
 }
 
 /*
@@ -152,15 +176,17 @@
 	viewport : portrait	
 */
 @media only screen and (min-width : 375px) and (min-height: 812px) {
-	
+	section.panel {
+		width: 375px;
+	}		
 }
 /* 
 	device: Iphone 6/7/8 Ios 11
 	viewport: landscape	
 */
 @media only screen and (min-width : 812px) and (min-height: 375px) {
-
-	// section.panel section select {
-	// 	width: 92rem;
-	// }	
+	section.panel {
+		width: 812px;
+	}	
+	
 }
